<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayerStats" android:clickable="false">

    <Button
            android:text="@string/reset_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/RESET_STATS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="552dp"
            android:layout_marginEnd="139dp"/>
    <TextView
            android:text="@string/player_statistics"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="88dp"
            android:layout_marginEnd="155dp"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_margin="40dp"
             app:layout_constraintBottom_toTopOf="@+id/RESET_STATS"
            tools:layout_editor_absoluteX="40dp" app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TableRow>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_new"
                    android:textColor="@color/white"
                    android:text="@string/games_played"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="" android:id="@+id/gpNum"
                    android:background="@color/purple_grey"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wins"
                    android:background="@color/purple_new"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="" android:id="@+id/winNum"
                    android:background="@color/purple_grey"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_new"
                    android:textColor="@color/white"
                    android:text="@string/losses"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="" android:id="@+id/lossNum"
                    android:background="@color/purple_grey"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/draws"
                    android:background="@color/purple_new"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="" android:id="@+id/drawNum"
                    android:background="@color/purple_grey"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rocks_played"
                    android:background="@color/purple_new"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="" android:id="@+id/rpNum"
                    android:background="@color/purple_grey"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/papers_played"
                    android:background="@color/purple_new"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="" android:id="@+id/ppNum"
                    android:background="@color/purple_grey"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scissors_played"
                    android:background="@color/purple_new"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="" android:id="@+id/spNum"
                    android:background="@color/purple_grey"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>